<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/display_message"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/display_message"
        android:textColor="#A2F368"
        android:textSize="25sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/insert"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:background="@drawable/login_button_bg"
            android:text="@string/insert" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_button_bg"
            android:text="@string/delete" />

        <Button
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_button_bg"
            android:text="@string/view" />

        <Button
            android:id="@+id/update"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_button_bg"
            android:text="@string/update" />
    </LinearLayout>

</LinearLayout>